suppress warnings on startup